--- a/app.ipynb
+++ b/app.ipynb
@@ -22,8 +22,7 @@
     "from pymongo import MongoClient\n",
     "import pprint\n",
     "printer = pprint.PrettyPrinter()\n",
-    "# connection_string = \"mongodb://root:cauldron@172.23.10.14:31011/?authSource=admin\"\n",
-    "connection_string = \"mongodb://admin:869U1ERA9XWhKRoi@172.23.10.14:31011/?authSource=DATA_DRIVEN_ENGINE_DEV\"\n",
+    "connection_string = \"URL\"\n",
     "client = MongoClient(connection_string)\n"
    ]
   },
