--- a/app.ipynb
+++ b/app.ipynb
@@ -19,6 +19,8 @@
    "source": [
     "# from http import client\n",
     "# import os\n",
+    "# from http import client\n",
+    "# import os\n",
     "from pymongo import MongoClient\n",
     "import pprint\n",
     "printer = pprint.PrettyPrinter()\n",
@@ -353,7 +355,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -367,7 +369,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "08b09dbd3dedaedd3f5a5039ed67e68d8cc2ab5378965730d5547a07efa91c36"
+   }
   }
  },
  "nbformat": 4,
