--- a/app.ipynb
+++ b/app.ipynb
@@ -22,7 +22,7 @@
     "from pymongo import MongoClient\n",
     "import pprint\n",
     "printer = pprint.PrettyPrinter()\n",
-    "# connection_string = \"mongodb://root:cauldron@172.23.10.14:31011/?authSource=admin\"\n",
+    "# connection_string = \n",
     "client = MongoClient(connection_string)\n"
    ]
   },
